# Space-

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: entities.hpp  linalg.hpp  manager.hpp  models.hpp
src/: entities.cpp  linalg.cpp  models.cpp
tecnica/: NOTE.txt  OFL.txt
